syntax = "proto3";

package uoms;

import "common/errors.proto";
import "common/statuses.proto";
import "common/numbers.proto";

enum Type {
  TYPE_UNSPECIFIED = 0;
  TYPE_FIAT = 1;
  TYPE_CRYPTO = 2;
  TYPE_MASS = 65;
  TYPE_LENGTH = 66;
  TYPE_TIME = 67;
  TYPE_AMOUNT_OF_SUBSTANCE = 68;
  TYPE_ELECTRIC = 69;
  TYPE_TEMPERATURE = 70;
  TYPE_LUMINOUS_INTENSITY = 71;
}

message TypeList {
  repeated Type list = 1;
}

// Backed by table 'uoms'
message UoM {
  string id = 1; // System Key: id is generated by the server or the database
  Type type = 2; // type + symbol form the Human-Readable Key (unique identifier)
  string symbol = 3; // type + Symbol form the Human-Readable Key (unique identifier)
  optional string name = 4;
  optional string icon = 5;
  uint32 managed_decimals = 6;
  uint32 displayed_decimals = 7;
  bool reporting_unit = 8;
  common.Status status = 9;
}

message List {
  repeated UoM list = 1;
}

message TypeSymbol {
  Type type = 1;
  string symbol = 2;
}

message Select {
  oneof select {
    string by_id = 1;
    TypeSymbol by_type_symbol = 2;
  }
}

message SelectList {
  repeated Select list = 1;
}

message CreateRequest {
  // id is generated by the server or the database
  Type type = 1;
  string symbol = 2;
  optional string name = 3;
  optional string icon = 4;
  optional uint32 managed_decimals = 5; // Default: 8
  optional uint32 displayed_decimals = 6; // Default: 3
  optional bool reporting_unit = 7; // Default: false
  optional common.Status status = 8; // Default: 0 (STATUS_UNSPECIFIED)
}

message CreateResponse {
  oneof response {
    common.Error error = 1;
    UoM uom = 2;
  }
}

message UpdateRequest {
  Select select = 1;
  optional Type type = 2;
  optional string symbol = 3;
  optional string name = 4;
  optional string icon = 5;
  optional uint32 managed_decimals = 6;
  optional uint32 displayed_decimals = 7;
  optional bool reporting_unit = 8;
  optional common.Status status = 9;
}

message UpdateResponse {
  oneof response {
    common.Error error = 1;
    UoM uom = 2;
  }
}

// GetRequest is expected to return a single value.
message GetRequest {
  Select select = 1;
}

// An error is returned if there is more than one record found.
message GetResponse {
  oneof response {
    common.Error error = 1;
    UoM uom = 2;
  }
}

// GetList will use SQL 'LIKE' instead of '=' for string fields
message GetListRequest {
  optional TypeList type = 1;
  optional string symbol = 2;
  optional string name = 3;
  optional string icon = 4;
  optional common.UInt32ValueList managed_decimals = 5;
  optional common.UInt32ValueList displayed_decimals = 6;
  optional bool reporting_unit = 7;
  optional common.StatusList status = 8;
}

message GetListResponse { // ListResponse is formatted for streaming
  oneof response {
    common.Error error = 1;
    UoM uom = 2;
  }
}

// A delete request is just an update request with status set to TERMINATED.
message DeleteRequest {
  Select select = 1;
}

message DeleteResponse {
  oneof response {
    common.Error error = 1;
    UoM uom = 2;
  }
}
